Added username and password to access MongoDB

--- a/Catalog.csproj
+++ b/Catalog.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>56cef15f-994e-4613-90ec-9db2b1ac734d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
